// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should be able to be disabled 1`] = `
<DocumentFragment>
  <button
    class="classname btn btn-default"
    disabled=""
  >
    <a>
      foo
    </a>
  </button>
</DocumentFragment>
`;

exports[`Button Component should render correctly 1`] = `
<DocumentFragment>
  <button
    class="classname btn btn-default"
    title="title"
  >
    <i
      class="fa icon"
    />
     
    <a>
      foo
    </a>
  </button>
</DocumentFragment>
`;
